# chip-8

./: CMakeLists.txt  DEBUG.TXT
include/: cpu.h  graphics.h
src/: cpu.c  graphics.c  main.c
